@@ -1,3 +1,7 @@
+2012-08-20  Simson Garfinkel  <simsong@FC17>
+
+	* configure.ac: increased version number to 1.3.0
+
 2012-08-16  Simson Garfinkel  <simsong@mucha.lan>
 
 	* src/tcpdemux.cpp (tcpdemux::process_tcp): fixed bug in which myflow.tlast wasn't being set.
